cluster/core/netpol/node-red.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-red-ingress
  namespace: home-automation
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-red
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 1880
  - from:
    - namespaceSelector:
        matchLabels:
          ns: uptime
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime
    ports:
    - protocol: TCP
      port: 1880
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-red-egress
  namespace: home-automation
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-red
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    - ipBlock:
        cidr: 192.168.0.77/32
    - ipBlock:
        cidr: 192.168.0.78/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: home-assistant
    ports:
    - port: 8123
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.14/32
    ports:
    - port: 8883
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.10.130/32
    ports:
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.10.100/32
  - to:
    - ipBlock:
        cidr: 192.168.10.145/32
    ports:
    - port: 80
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.10.215/32
    ports:
    - port: 4200
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.20.130/32
    - ipBlock:
        cidr: 192.168.20.131/32
    ports:
    - port: 16021
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.1/32
    ports:
    - port: 8443
      protocol: TCP
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
